[gd_scene load_steps=2 format=3 uid="uid://b2inyoqrs88yq"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_xo877"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xo877")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.760784, 0.478431, 0.196078, 1)

[node name="Options Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.381703, 0.381703, 0.381703, 1)

[node name="Options Container" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 88

[node name="Play Button" type="Button" parent="Options Container"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Play Game"

[node name="Settings Button" type="Button" parent="Options Container"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Settings"

[node name="Quit Button" type="Button" parent="Options Container"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Quit Game"

[connection signal="button_up" from="Options Container/Play Button" to="." method="_on_play_button_button_up"]
[connection signal="button_up" from="Options Container/Settings Button" to="." method="_on_settings_button_button_up"]
[connection signal="button_up" from="Options Container/Quit Button" to="." method="_on_quit_button_button_up"]
